--- a/todo
+++ b/todo
@@ -4,3 +4,4 @@
 - anyone in hbl online doesnt work, google script deployment issue
 - flow of first 1000 goodie bag 
 - when scanning also show the status of the goodie bag
+- demodag vullen met afbeeldingen van figma die je kreeg van gijs teams
