--- a/todo
+++ b/todo
@@ -1,3 +1,3 @@
 - anyone in hbl online doesnt work, google script deployment issue
-- flow of first 1000 goodie bag 
+- flow of first 1000 goodie bag > wat als er een non goodie bag qr code gescand wordt, wat gebeurt er dan
 - demodag vullen met afbeeldingen van figma die je kreeg van gijs teams
