--- a/todo
+++ b/todo
@@ -1,2 +1,3 @@
 - anyone in hbl online doesnt work, google script deployment issue
 - flow of first 1000 goodie bag > wat als er een non goodie bag qr code gescand wordt, wat gebeurt er dan
+- melding voor: deze email voornaam en achternaam combinatie heeft al een keer een goodie bag ontvangen
