--- a/todo
+++ b/todo
@@ -1,1 +1,2 @@
 - anyone in hbl online doesnt work, google script deployment issue
+<!-- - melding voor: deze email voornaam en achternaam combinatie heeft al een keer een goodie bag ontvangen -->
